# TO-DO

./: README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 2025_03_14_0953-e0671f6df8a1_create_tasks_table.py
app/: main.py
app/api/: __init__.py  todos.py
app/core/: config.py
app/core/models/: __init__.py  base.py  db_helper.py  todo.py
app/core/schemas/: schemas.py
app/crud/: crud.py
todo-frontend/: package-lock.json  package.json
todo-frontend/src/app/: layout.tsx  page.tsx  style.css  todos.tsx
