[project]
name = "to-do"
version = "0.1.0"
description = "My first attempt to create a to-do application"
authors = [
    {name = "Maksym Chesherov",email = "chesherow22d@gmail.com"}
]
license = {text = "MIT"}
#readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.11,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.39,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
